cors config adjustment